# clockify_fill-gaps

./: README.md  clockify_gaps.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
