[project]
name = "clockify-fill-gaps"
version = "0.1.0"
description = "Just to automate filling of remaining gaps of time in between Clockify time entries (e.g., meetings)"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "tzdata>=2025.3",
]
